doc: 修改文档
* 按功能加tag
* int型参数的类型：string -> int
